Fix overflows and padding

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 :root {
 	--search-width: 500px;
-	--post-width: 624px;
+	--post-width: 600px;
 	--post-profile-size: 50px;
 	--post-media-ratio: 5/3;
 	--send-profile-size: 35px;
